force-app/main/default/objects/ssot__CoverageBenefitItemLimit__dlm/fields/ssot__AppliedLimitNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AppliedLimitNumber__c</fullName>
    <label>Applied Limit Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AppliedLimitNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>