force-app/main/default/objects/ssot__CoverageBenefitItemLimit__dlm/fields/ssot__CoverageBenefitItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoverageBenefitItemId__c</fullName>
    <label>Coverage Benefit Item</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoverageBenefitItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>