force-app/main/default/objects/ssot__CoverageBenefitItemLimit__dlm/fields/ssot__CoverageLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoverageLevel__c</fullName>
    <label>Coverage Level</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoverageLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>