force-app/main/default/objects/ssot__CoverageBenefitItemLimit__dlm/fields/ssot__NetworkType__c.field-meta.xml
<CustomField>
    <fullName>ssot__NetworkType__c</fullName>
    <label>Network Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NetworkType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>