force-app/main/default/objects/ssot__CoverageBenefitItemLimit__dlm/fields/ssot__PriorityOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriorityOrderNumber__c</fullName>
    <label>Priority Order</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriorityOrderNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>